fix favicon and tradingviews height on iphone 5

--- a/src/components/Chart.scss
+++ b/src/components/Chart.scss
@@ -25,6 +25,7 @@ $overlay: rgba(130,130,130,.1);
     display: flex;
     #tv_chart_container {
       flex: 1;
+      height: 100%;
     }
   }
 }
